@@ -28,3 +28,4 @@ Fixes:
     * Fixed glGetIntegerv() in Direct Rendering mode for Evas GL
       to properly handle GL_SCISSOR_BOX and GL_VIEWPORT parameters.
     * Fixed textblock textprop leak.
+    * Fixed evas_object_box to reset size_hint_min to zero when no child.
